<resources>
    <string name="app_name">MealUpApp</string>
    <string name="bmr_result">bmr_result</string>
    <string name="height_cm">Height (cm)</string>
    <string name="female">Female</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="your_bmr">Your BMR</string>
    <string name="current_age">Current Age</string>
    <string name="macro_calculator">Macro Calculator</string>
    <string name="male">Male</string>
    <string name="choose_gender">Choose Gender</string>
</resources>