<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".macro_calcul">

    <TextView
        android:id="@+id/createlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/macro_calculator"
        android:textColor="#5C6BC0"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createlogo"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:ems="10"
        android:hint="@string/current_age"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#455A64"
        android:autofillHints="" />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:ems="10"
        android:hint="@string/height_cm"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#455A64"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/height"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:ems="10"
        android:hint="@string/weight_kg"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#455A64"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weight"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/choose_gender"
        android:textColor="#5C6BC0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weight"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="Male"
        android:text="@string/male"
        android:textColor="#212121"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/male"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="Female"
        android:text="@string/female"
        android:textColor="#212121" />

    <TextView
        android:id="@+id/bmr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/female"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/your_bmr"
        android:textColor="#5C6BC0"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/female"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/bmr_result"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#1B5E20"
        android:importantForAutofill="no" />

</RelativeLayout>


