<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MacroCalculator">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TextView
            android:id="@+id/createlogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/macro_calculator"
            android:textColor="#5C6BC0"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createlogo"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="#30ffffff"
            android:ems="10"
            android:hint="@string/current_age"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/height1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:hint="Height (ft)"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/height2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:layout_toRightOf="@+id/height1"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:hint="Height (in)"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/height1"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="Weight (Ibs)"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="#455A64" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_centerInParent="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/choose_gender"
            android:textColor="#5C6BC0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_marginStart="80dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:onClick="Male"
            android:text="@string/male"
            android:textColor="#212121"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_centerInParent="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:layout_toRightOf="@+id/male"
            android:backgroundTint="@android:color/holo_green_dark"
            android:onClick="Female"
            android:text="@string/female"
            android:textColor="#212121" />

        <TextView
            android:id="@+id/bmr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_centerInParent="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="BMR (Calories)"
            android:textColor="#5C6BC0"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_centerInParent="true"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:hint="Result"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#1B5E20" />
        <TextView
            android:id="@+id/protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:text="Protein"
            android:textColor="#5C6BC0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result"
            android:layout_marginStart="65dp"
            android:layout_marginTop="40dp"
            android:layout_toRightOf="@+id/protein"
            android:text="Carbs"
            android:textColor="#5C6BC0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:text="Fat"
            android:layout_toRightOf="@+id/carbs"
            android:layout_marginStart="80dp"
            android:textColor="#5C6BC0"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/protein_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/protein"
            android:layout_marginTop="5dp"
            android:ems="4"
            android:layout_marginStart="45dp"
            android:hint="Result (g)"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#1B5E20" />
        <EditText
            android:id="@+id/carbs_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/carbs"
            android:layout_marginTop="5dp"
            android:ems="4"
            android:layout_marginStart="60dp"
            android:hint="Result (g)"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#1B5E20"
            android:layout_toRightOf="@+id/protein"/>

        <EditText
            android:id="@+id/fat_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/carbs"
            android:layout_marginTop="5dp"
            android:ems="4"
            android:layout_marginStart="60dp"
            android:hint="Result (g)"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#1B5E20"
            android:layout_toRightOf="@+id/carbs"/>
    </RelativeLayout>

</ScrollView>


